--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <title>Primeiro Projeto</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="light"> 
+  <body class="ligh"> 
     <div id="container">
         <div id="profile">
-          <img src="./assets/ava" alt="imageprofiledark" />
+          <img src="./assets/avatar.png" alt="imageprofile" />
           <p id="arroba">@caiooarj</p>
         </div>
           <div id="switcher" onclick="toggleMode()">
